# luma

./: .gitmodules  CMakeLists.txt  main.cpp
assets/: .gitignore  README.md
shaders/: compile.py
shaders/hlsl/: HLSLCPPCompat.hlsli  ShaderTypes.hlsli  cubemapShadowDepth.hlsl  pointLightVisualize.hlsl  unity.hlsl  vertex.hlsl  vertexSemantics.hlsli
shaders/src/: unity.hlsl
src/: Camera.cpp  Camera.h  Globals.h  Globlas.cpp  Helpers.h  InputDeviceState.h  Scene.h  SceneLoader.cpp  SceneLoader.h  SceneRenderer.cpp  SceneRenderer.h  ShaderManager.cpp  ShaderManager.h  main.cpp  pch.h
src/Input/: InputDeviceState.cpp  InputManager.cpp  InputManager.h
src/Win/: BaseWindow.h
